# nonebot-plugin-datastore

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: codecov.yml  release-draft.yml  release.yml
nonebot_plugin_datastore/: __init__.py  __main__.py  alembic.ini  compat.py  config.py  db.py  plugin.py  utils.py
nonebot_plugin_datastore/migrations/: 0f8d23241fd7_.py  env.py
nonebot_plugin_datastore/providers/: __init__.py  database.py  json.py  toml.py  yaml.py
nonebot_plugin_datastore/script/: __init__.py  cli.py  command.py  migrate.py  script.py  utils.py
nonebot_plugin_datastore/script/migration/: env.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_get_plugin.py  test_network_file.py  test_open.py  test_plugin.py  test_registry.py  test_singleton.py  utils.py
tests/example/: __init__.py  models.py
tests/example/migration/: bef062d23d1f_.py
tests/example/plugin1/: models.py
tests/example/plugin1/migrations/: bef062d23d1f_.py
tests/example/plugin2/: models.py
tests/example/plugin_migrate/: __init__.py  models.py
tests/example/plugin_migrate/migrations/: bef062d23d1f_init.py
tests/example/pre_db_init_error/: __init__.py  models.py
tests/example2/: __init__.py  models.py
tests/registry/plugin1/: __init__.py  models.py
tests/registry/plugin1/migrations/: fe1db52965c8_.py  ff18b81ee1ca_init_db.py
tests/registry/plugin2/: __init__.py  models.py
tests/registry/plugin2/migrations/: 6b6cd695b2e7_.py  a1219e33400e_init_db.py
tests/registry/plugin3/: models.py
tests/registry/plugin3/migrations/: 548b56a0ceca_.py
tests/registry/plugin3_plugin4/: __init__.py  models.py
tests/registry/plugin3_plugin4/migrations/: 2c2ebd61d932_init_db.py
tests/registry/plugin4/: models.py
tests/registry/plugin4/migrations/: 02980992bc26_.py
