[tool.poetry]
name = "nonebot-plugin-datastore"
version = "1.2.1"
description = "适用于 Nonebot2 的数据存储插件"
authors = ["hemengyang <hmy0119@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/he0119/nonebot-plugin-datastore"
repository = "https://github.com/he0119/nonebot-plugin-datastore"
documentation = "https://github.com/he0119/nonebot-plugin-datastore#readme"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = { extras = ["httpx"], version = "^2.3.0" }
nonebot-plugin-localstore = ">=0.6.0"
sqlalchemy = { extras = ["aiosqlite"], version = "^2.0.0" }
alembic = "^1.9.1"

anyio = { version = ">=3.6", optional = true }
click = { version = ">=8.0", optional = true }
typing-extensions = { version = ">=4.4", optional = true }
rtoml = { version = ">=0.9.0", optional = true }
pyyaml = { version = ">=6.0", optional = true }

[tool.poetry.group.dev.dependencies]
nonebug = ">=0.3.1"
pytest-cov = ">=4.0.0"
pytest-xdist = ">=3.1.0"
pytest-mock = ">=3.10.0"
pytest-asyncio = ">=0.23.5"
nb-cli = ">=1.4.0"
nonebot2 = { extras = ["httpx", "fastapi"], version = "^2.2.0" }

[tool.poetry.extras]
cli = ["anyio", "click", "typing-extensions"]
toml = ["rtoml"]
yaml = ["pyyaml"]
all = ["anyio", "click", "typing-extensions", "rtoml", "pyyaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"
defineConstant = { PYDANTIC_V2 = true }

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
]
omit = ["*/script/command.py", "*/migrations/*", "*/compat.py"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "W",   # pycodestyle warnings
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
]
ignore = [
  "E402",  # module-import-not-at-top-of-file, Module level import not at top of cell
  "UP037", # quoted-annotation,	Remove quotes from type annotation
]

[tool.poetry.plugins.nb_scripts]
datastore = "nonebot_plugin_datastore.script.cli:main"

[tool.nonebot]
plugins = ["nonebot_plugin_datastore"]
plugin_dirs = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
