[project]
name = "nonebot-plugin-datastore"
version = "1.3.1"
description = "适用于 Nonebot2 的数据存储插件"
authors = [{ name = "uy_sun", email = "hmy0119@gmail.com" }]
dependencies = [
    "nonebot2[httpx]>=2.3.0",
    "nonebot-plugin-localstore>=0.7.0",
    "sqlalchemy[aiosqlite]>=2.0.0",
    "alembic>=1.9.1",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/he0119/nonebot-plugin-datastore"
Repository = "https://github.com/he0119/nonebot-plugin-datastore.git"
Issues = "https://github.com/he0119/nonebot-plugin-datastore/issues"
Changelog = "https://github.com/he0119/nonebot-plugin-datastore/blob/main/CHANGELOG.md"

[project.optional-dependencies]
cli = ["anyio>=3.6.0", "click>=8.0.0", "typing-extensions>=4.4.0"]
toml = ["rtoml>=0.9.0"]
yaml = ["pyyaml>=6.0.0"]
all = [
    "anyio>=3.6.0",
    "click>=8.0.0",
    "typing-extensions>=4.4.0",
    "rtoml>=0.9.0",
    "pyyaml>=6.0.0",
]

[project.entry-points.nb_scripts]
datastore = "nonebot_plugin_datastore.script.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_datastore"]

[tool.hatch.build.targets.sdist]
only-include = ["nonebot_plugin_datastore"]

[tool.rye]
managed = true
universal = true
dev-dependencies = [
    "nonebug>=0.3.7",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
    "nb-cli>=1.4.1",
    "nonebot2[httpx,fastapi]>=2.3.2",
]

[tool.rye.scripts]
test = "pytest --cov=nonebot_plugin_datastore --cov-report xml -n auto"

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "standard"
defineConstant = { PYDANTIC_V2 = true }

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
]
ignore = [
    "E402", # module-import-not-at-top-of-file
]

[tool.nonebot]
plugins = ["nonebot_plugin_datastore"]
plugin_dirs = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError:",
]
omit = ["*/script/command.py", "*/migrations/*", "*/compat.py"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
